--- a/apps/kubeflow-app.yaml
+++ b/apps/kubeflow-app.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: kubeflow
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: datalab
