--- a/apps/kubeflow-certmanager.yaml
+++ b/apps/kubeflow-certmanager.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: kubeflow-cert-manager
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: cert-manager
