--- a/apps/kubeflow-istio.yaml
+++ b/apps/kubeflow-istio.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: kubeflow-istio
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: istio-system
