--- a/apps/kubeflow-katib.yaml
+++ b/apps/kubeflow-katib.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: kubeflow-katib
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     namespace: datalab
