--- a/apps/kubeflow-katib.yaml
+++ b/apps/kubeflow-katib.yaml
@@ -14,8 +14,8 @@ spec:
     path: kubeflow-katib/
     repoURL: https://github.com/tom333/argocd-kubeflow.git
     targetRevision: HEAD
-    # kustomize:
-    #   version: v3.5.4
+    kustomize:
+      version: v3.2.0
   syncPolicy:
     syncOptions:
       - CreateNamespace=false
