--- a/kubeflow-dex/kustomization.yaml
+++ b/kubeflow-dex/kustomization.yaml
@@ -2,5 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ./overlays/istio
+  #- ./overlays/istio
+  - git@github.com:kubeflow/manifests.git/common/dex/overlays/istio?ref=v1.5.1-rc1
   - ./base-oidc-authservice/
