--- a/kubeflow-dex/kustomization.yaml
+++ b/kubeflow-dex/kustomization.yaml
@@ -3,5 +3,5 @@ kind: Kustomization
 
 resources:
   #- ./overlays/istio
-  - git@github.com:kubeflow/manifests.git/common/dex/overlays/istio?ref=v1.5.0-rc1
+  - github.com/kubeflow/manifests.git/common/dex/overlays/istio?ref=v1.5.0-rc1
   - ./base-oidc-authservice/
