--- a/kubeflow-dex/kustomization.yaml
+++ b/kubeflow-dex/kustomization.yaml
@@ -2,6 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  #- ./overlays/istio
-  - git@github.com:kubeflow/manifests.git/common/dex/overlays/istio?ref=v1.5.0-rc1
+  - ./overlays/istio
   - ./base-oidc-authservice/
