--- a/apps/kubeflow-app.yaml
+++ b/apps/kubeflow-app.yaml
@@ -23,3 +23,16 @@ spec:
       selfHeal: true
       allowEmpty: true
       prune: true
+  ignoreDifferences:
+    - kind: ClusterRole
+      jqPathExpressions:
+        - .rules
+    - kind: MutatingWebhookConfiguration
+      jqPathExpressions:
+        - .webhooks
+    - kind: ValidatingWebhookConfiguration
+      jqPathExpressions:
+        - .webhooks[]?.clientConfig
+    - kind: CustomResourceDefinition
+      jqPathExpressions:
+        - .spec.conversion.webhookClientConfig.caBundle
