--- a/apps/kubeflow-app.yaml
+++ b/apps/kubeflow-app.yaml
@@ -31,7 +31,7 @@ spec:
     - group: admissionregistration.k8s.io
       kind: MutatingWebhookConfiguration
       jqPathExpressions:
-        - .webhooks]?.clientConfig.caBundle
+        - .webhooks[]?.clientConfig.caBundle
     - group: admissionregistration.k8s.io
       kind: ValidatingWebhookConfiguration
       jqPathExpressions:
