feat(kubeflow): update manifests to v1.5.0-rc2

--- a/manifests/apps/centraldashboard/upstream/overlays/kserve/patches/configmap.yaml
+++ b/manifests/apps/centraldashboard/upstream/overlays/kserve/patches/configmap.yaml
@@ -27,7 +27,7 @@ data:
         },
         {
           "type": "item",
-          "link": "/models/",
+          "link": "/kserve-endpoints/",
           "text": "Models",
           "icon": "kubeflow:models"
         },
