--- a/manifests/apps/katib/upstream/components/controller/trial-templates.yaml
+++ b/manifests/apps/katib/upstream/components/controller/trial-templates.yaml
@@ -14,7 +14,7 @@ data:
         spec:
           containers:
             - name: training-container
-              image: docker.io/kubeflowkatib/mxnet-mnist:v0.13.0-rc.1
+              image: docker.io/kubeflowkatib/mxnet-mnist:v0.13.0
               command:
                 - "python3"
                 - "/opt/mxnet-mnist/mnist.py"
@@ -32,7 +32,7 @@ data:
         spec:
           containers:
             - name: training-container
-              image: docker.io/kubeflowkatib/enas-cnn-cifar10-cpu:v0.13.0-rc.1
+              image: docker.io/kubeflowkatib/enas-cnn-cifar10-cpu:v0.13.0
               command:
                 - python3
                 - -u
@@ -53,7 +53,7 @@ data:
             spec:
               containers:
                 - name: pytorch
-                  image: docker.io/kubeflowkatib/pytorch-mnist:v0.13.0-rc.1
+                  image: docker.io/kubeflowkatib/pytorch-mnist:v0.13.0
                   imagePullPolicy: Always
                   command:
                     - "python3"
@@ -68,7 +68,7 @@ data:
             spec:
               containers:
                 - name: pytorch
-                  image: docker.io/kubeflowkatib/pytorch-mnist:v0.13.0-rc.1
+                  image: docker.io/kubeflowkatib/pytorch-mnist:v0.13.0
                   imagePullPolicy: Always
                   command:
                     - "python3"
