--- a/manifests/apps/katib/upstream/installs/katib-with-kubeflow/kustomization.yaml
+++ b/manifests/apps/katib/upstream/installs/katib-with-kubeflow/kustomization.yaml
@@ -9,13 +9,13 @@ resources:
 images:
   - name: docker.io/kubeflowkatib/katib-controller
     newName: docker.io/kubeflowkatib/katib-controller
-    newTag: v0.13.0-rc.1
+    newTag: v0.13.0
   - name: docker.io/kubeflowkatib/katib-db-manager
     newName: docker.io/kubeflowkatib/katib-db-manager
-    newTag: v0.13.0-rc.1
+    newTag: v0.13.0
   - name: docker.io/kubeflowkatib/katib-ui
     newName: docker.io/kubeflowkatib/katib-ui
-    newTag: v0.13.0-rc.1
+    newTag: v0.13.0
 
 patchesStrategicMerge:
   - patches/remove-namespace.yaml
