--- a/manifests/common/oidc-authservice/base/params.env
+++ b/manifests/common/oidc-authservice/base/params.env
@@ -2,7 +2,7 @@ OIDC_PROVIDER=http://dex.auth.svc.cluster.local:5556/dex
 OIDC_AUTH_URL=/dex/auth
 OIDC_SCOPES=profile email groups
 REDIRECT_URL=/login/oidc
-SKIP_AUTH_URI=/dex
+SKIP_AUTH_URI=/dex /.well-known
 USERID_HEADER=kubeflow-userid
 USERID_PREFIX=
 USERID_CLAIM=email
