--- a/manifests/common/oidc-authservice/base/params.env
+++ b/manifests/common/oidc-authservice/base/params.env
@@ -3,6 +3,7 @@ OIDC_AUTH_URL=/dex/auth
 OIDC_SCOPES=profile email groups
 REDIRECT_URL=/login/oidc
 SKIP_AUTH_URI=/dex /.well-known
+SKIP_AUTH_URLS=/dex /.well-known
 USERID_HEADER=kubeflow-userid
 USERID_PREFIX=
 USERID_CLAIM=email
