--- a/apps/kubeflow-app.yaml
+++ b/apps/kubeflow-app.yaml
@@ -31,12 +31,12 @@ spec:
     - group: admissionregistration.k8s.io
       kind: MutatingWebhookConfiguration
       jqPathExpressions:
-        - .webhooks[]?.clientConfig.caBundle
+        - .webhooks[]?.clientConfig
     - group: admissionregistration.k8s.io
       kind: ValidatingWebhookConfiguration
       jqPathExpressions:
-        - .webhooks[]?.clientConfig.caBundle
+        - .webhooks[]?.clientConfig
     - group: apiextensions.k8s.io
       kind: CustomResourceDefinition
       jqPathExpressions:
-        - .spec.conversion.webhookClientConfig.caBundle
+        - .spec.conversion.webhookClientConfig
