fix(katib): revision des regles

--- a/apps/kubeflow-knative.yaml
+++ b/apps/kubeflow-knative.yaml
@@ -28,3 +28,19 @@ spec:
       kind: ClusterRole
       jqPathExpressions:
         - .rules
+    - group: rbac.authorization.k8s.io
+      kind: ClusterRole
+      jqPathExpressions:
+        - .rules
+    - group: admissionregistration.k8s.io
+      kind: MutatingWebhookConfiguration
+      jqPathExpressions:
+        - .webhooks[]?.clientConfig
+    - group: admissionregistration.k8s.io
+      kind: ValidatingWebhookConfiguration
+      jqPathExpressions:
+        - .webhooks[]?.clientConfig
+    - group: apiextensions.k8s.io
+      kind: CustomResourceDefinition
+      jqPathExpressions:
+        - .spec.conversion.webhookClientConfig
